# BinaryFetch

./: 03_Forest_glow.json  BinaryARTS.txt  CONTRIBUTING.md  LICENSE.md  README.md
.history/project_binary_fetch/: CMakeLists_20260127041148.txt  CMakeLists_20260127044625.txt  CMakeLists_20260127045322.txt  CMakeLists_20260127050856.txt
.history/project_binary_fetch/binary_fetch_v1/: CPUInfo_20260311001418.cpp  CPUInfo_20260313024729.cpp  CPUInfo_20260313024733.cpp  CompactAudio_20260313024331.cpp  CompactAudio_20260313024337.cpp  CompactCPU_20260313024406.cpp  CompactCPU_20260313024413.cpp  CompactGPU_20260313024431.cpp  CompactMemory_20260311001418.cpp  CompactMemory_20260313024445.cpp  CompactMemory_20260313024459.cpp  CompactOS_20260311001418.cpp  CompactOS_20260313024546.cpp  CompactOS_20260313024552.cpp  CompactPerformance_20260313024602.cpp  CompactScreen_20260311001418.cpp  CompactScreen_20260313024621.cpp  CompactScreen_20260313024629.cpp  CompactScreen_20260313024646.cpp  CompactSystem_20260311001418.cpp  CompactSystem_20260313024700.cpp  CompactSystem_20260313024707.cpp  CompactUser_20260311001418.cpp  CompactUser_20260313024718.cpp  DisplayInfo_20260311001418.cpp  DisplayInfo_20260313024809.cpp  DisplayInfo_20260313024815.cpp  DisplayInfo_20260313024821.cpp  DtailedGPUInfo_20260313024830.cpp  DtailedGPUInfo_20260313024834.cpp  GPUInfo_20260313024919.cpp  MemoryInfo_20260311001418.cpp  MemoryInfo_20260313025017.cpp  MemoryInfo_20260313025027.cpp  OSInfo_20260313025105.cpp  OSInfo_20260313025111.cpp  PerformanceInfo_20260311001418.cpp  PerformanceInfo_20260313025138.cpp  StorageInfo_20260313025158.cpp  StorageInfo_20260313025205.cpp  (+20 more)
.history/project_binary_fetch/binary_fetch_v1/include/: CompactGPU_20260324034204.h  CompactGPU_20260324034218.h  compact_disk_info_20260324033923.h  compact_disk_info_20260324033931.h  compact_disk_info_20260324033937.h  temp_20260127035013.txt  temp_20260127035018.txt
.history/project_binary_fetch/binary_fetch_v1/src/: main_20260127051117.cpp
Json_themes_for_devs/: 00_default_theme.json  02_Sunset_Forest.json  04_Neon_light  05_Amber_dusk.json  06_ice_crystal.json  07_mint_chocolate.json  08_royal_purple_gold.json  09_cyberpunk  theme_01.json
project_binary_fetch/: CMakeLists.txt
project_binary_fetch/binary_fetch_v1/: Art_Collections.txt  AsciiArt.cpp  AsciiArt.h  AsciiArtControlEngine.h  CMakeLists.txt  CPUInfo.cpp  CompactAudio.cpp  CompactCPU.cpp  CompactGPU.cpp  CompactNetwork.cpp  CompactOS.h  CompactPerformance.cpp  CompactPerformance.h  CompactScreen.cpp  CompactScreen.h  Config.json  DefaultAsciiArt.txt  Default_BinaryFetch_Config.json  DetailedScreen.cpp  DetailedScreen.h  DistroDetector.cpp  DistroDetector.h  DtailedGPUInfo.cpp  ExtraInfo.cpp  GPUInfo.cpp  GPUInfo.h  NetworkInfo.cpp  OSInfo.cpp  PerformanceInfo.h  StorageInfo.cpp  StorageInfo.h  SystemInfo.cpp  TimeInfo.cpp  TimeInfo.h  UserInfo.cpp  binary_fetch_v1.vcxproj  binary_fetch_v1.vcxproj.filters  config.json  main.cpp  resources.rc
project_binary_fetch/binary_fetch_v1/Documentation/: BinaryFetch documentation.md  TrackDocs.md
project_binary_fetch/binary_fetch_v1/Environment Setup/: Readme.md
project_binary_fetch/binary_fetch_v1/include/: AsciiArt.h  ExtraInfo.h  StorageInfo.h
project_binary_fetch/binary_fetch_v1/nolhmann/: BinaryFetch_config.json
project_binary_fetch/binary_fetch_v1/platform/: HttpClient.h  Platform.h  PlatformConfig.h  PlatformUtils.h
project_binary_fetch/binary_fetch_v1/platform/freebsd/: AudioInfoFreeBSD.cpp  CPUInfoFreeBSD.cpp  DisplayInfoFreeBSD.cpp  GPUInfoFreeBSD.cpp  MemoryInfoFreeBSD.cpp  NetworkInfoFreeBSD.cpp  OSInfoFreeBSD.cpp  PerformanceInfoFreeBSD.cpp  StorageInfoFreeBSD.cpp  SystemInfoFreeBSD.cpp
project_binary_fetch/binary_fetch_v1/platform/linux/: CPUInfoLinux.cpp  DisplayInfoLinux.cpp  GPUInfoLinux.cpp  MemoryInfoLinux.cpp  NetworkInfoLinux.cpp  OSInfoLinux.cpp  PerformanceInfoLinux.cpp  StorageInfoLinux.cpp  SystemInfoLinux.cpp
project_binary_fetch/binary_fetch_v1/platform/posix/: CompactAudioPosix.cpp  CompactCPUPosix.cpp  CompactGPUPosix.cpp  CompactMemoryPosix.cpp  CompactNetworkPosix.cpp  CompactOSPosix.cpp  CompactPerformancePosix.cpp  CompactScreenPosix.cpp  CompactSystemPosix.cpp  CompactUserPosix.cpp  ConsoleUtilsPosix.cpp  DetailedGPUInfoPosix.cpp  DetailedScreenPosix.cpp  ExtraInfoPosix.cpp  UserInfoPosix.cpp  compact_disk_infoPosix.cpp
project_binary_fetch/binary_fetch_v1/resources/: CMakeLists.txt  Default_BinaryFetch_Config.json
project_binary_fetch/binary_fetch_v1/src/: ExtraInfo.cpp  GPUInfo.cpp
project_binary_fetch/binary_fetch_v1/text infos/: Art_Collections.txt  Commit_Info.txt  Current_Status_of_BinaryFetch.txt  Engine_info.md  Standalone Json File management.md  better output format.txt  locations.md  main 8.txt
project_binary_fetch/src/: NetworkInfo.cpp  StorageInfo.cpp
